Fixes jump links.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -146,6 +146,7 @@
     }
 
     .respond-to-max(599px, {
+        box-sizing: border-box;
         display: block;
         padding: unit(10px / @base-font-size-px, em) 1.25em unit(10px / @base-font-size-px, em) 0;
         border: dotted @pacific;
